src/less/phraseOccurrence.less
div#goExampleOccurrencePage {
  height: calc(100% - 100px);
}

div#goExampleFindOccurrencePageWrapper {
  height: 100%;
  width: 100%;
  overflow: auto;
}

.flex-gt-sm button {
  color: white;
  background-color: rgb(255,64,129);
}

div#goExampleFindOccurrenceInnerWrapper input {
  padding: 10px;
  background-color: #f5f8fa;
}

div#goExampleFindOccurrenceTitle {
  & h1 {
    color: #282e44;
    text-transform: capitalize;
    //font-family: "Open Sans", Helvetica, Arial, sans-serif;
    text-align: center;
    padding-top: 15px;
    padding-bottom: 10px;
    border-bottom: solid;
    border-color: #282E43;
    width: fit-content;
    width: -moz-fit-content;
    margin: auto;
  }
  & img {
    width: 50px;
    vertical-align: middle;
    margin-left: 10px;
  }
}

div#goExampleFindOccurrenceInputWrapper {
  & h3 {
    color: #282e44;
    text-transform: capitalize;
    //font-family: "Open Sans", Helvetica, Arial, sans-serif;
    text-align: center;
    padding-top: 15px;
    padding-bottom: 20px;
    width: -moz-fit-content;
    margin: auto;
  }
}

div#goExampleFindOccurrenceInnerWrapper,
div#goExampleFindOccurrenceReturnWrapper {
  width: fit-content;
  width: -moz-fit-content;
  margin: auto;
  padding-top: 10px;
  display: flex;
}

